    * 0392 FIX: LDAP: Improved error messages of LDAP configuration test...
    * 0415 FIX: LDAP: The LDAP Settings dialog is now disabled when the LDAP Connector is disabled
    * 0416 FIX: When doing user sync on user page rendering, contact group memberships are shown correctly now...
    * 0417 FIX: LDAP: Fixed "Sync-Plugin: Roles" test with OpenLDAP
    * 0419 FIX: LDAP: The default user profile roles are only assigned to users without roles...

    Notifications:
    * 0362 sms: now searching PATH for sendsms and smssend commands...
    * 0108 FIX: Prevent service notification on host alerts...
    * 0058 FIX: Fix email notifications containing non-ASCII characters in some situtations...

    Reporting & Availability:
    * 0018 New option for displaying a legend for the colors used in the timeline...
    * 0338 FIX: Introduce time limit on availability queries...

    Event Console:
    * 0301 Handling messages of special syslog format correctly...
    * 0388 Moved Event Console related settings to own settings page...
    * 0303 FIX: Old log entries were shown in event history first...
    * 0304 FIX: Escaping several unwanted chars from incoming log messages...
    * 0089 FIX: CSV export of event console was broken...
    * 0359 FIX: Fixed exception in event simulator when one match group did not match
    * 0384 FIX: Trying to prevent problem when restarting mkeventd...

    Livestatus:
    * 0337 New header for limiting the execution time of a query...
    * 0335 FIX: Parse state of downtime notification log entries correctly...
    * 0336 FIX: Limit the number of lines read from a single logfile...
    * 0344 FIX: Fix semantics of columns num_services_hard_*...


1.2.3i7:
    Core & Setup:
    * 0011 Introduce optional lower limit for predicted levels...
    * 0217 FIX: More verbose error output for SNMP errors on the command line...
    * 0288 FIX: Error messages of datasource programs (e.g. VSphere Agent) are now visible within WATO...