@@ -121,6 +121,7 @@
     * 0415 FIX: LDAP: The LDAP Settings dialog is now disabled when the LDAP Connector is disabled
     * 0416 FIX: When doing user sync on user page rendering, contact group memberships are shown correctly now...
     * 0417 FIX: LDAP: Fixed "Sync-Plugin: Roles" test with OpenLDAP
+    * 0418 FIX: LDAP: Fixed broken role sync plugin with OpenLDAP...
     * 0419 FIX: LDAP: The default user profile roles are only assigned to users without roles...
 
     Notifications:
